update fields account client
